Moves caption spacing to fixed height

--- a/app/_scss/pages/blog.scss
+++ b/app/_scss/pages/blog.scss
@@ -72,7 +72,7 @@
 					}
 
 					figcaption {
-						margin-top: 0.5em;
+						margin-top: 18px;
 						text-align: center;
 					}
 				}
